syntax = "proto3";

package keychain;

option csharp_namespace = "Keychain";

enum KeyType {
  USER_PUBLIC = 0;
  USER_PRIVATE = 1;
  GROUP_PUBLIC = 2;
  GROUP_PRIVATE = 3;
  EXECUTIVE_PUBLIC = 4;
  EXECUTIVE_PRIVATE = 5;
}

message CreateRequest {
  bytes token = 1;
  bytes data = 2;
  KeyType type = 3;
  optional string group_id = 4;
  optional string chat_id = 5;
}

message GetRequest {
  bytes token = 1;
  string user_id = 2;
  KeyType type = 3;
}

message UpdateRequest {
  bytes token = 1;
  string key_id = 2;
  KeyType type = 3;
}

message DeleteRequest {
  bytes token = 1;
  string key_id = 2;
  KeyType type = 3;
}