syntax = "proto3";

package keychain;

option csharp_namespace = "Keychain";

enum Status {
  OK = 0;
  ERROR = 1;
  NOT_AUTHORIZED = 2;
  NOT_AUTHENTICATED = 3;
}

message Result {
  Status status = 1;
}

message Empty {}

message KeyResponse {
  Status status = 1;
  optional string id = 2;
  optional bytes data = 3;
  optional string user_id = 4;
  optional string group_id = 5;
  optional string chat_id = 6;
}